--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-03-17 14:30+0100\n"
-"Last-Translator: arvvoid\n"
+"PO-Revision-Date: 2020-03-18 08:48+0100\n"
+"Last-Translator: Ajnasz <ajnasz@ajnasz.hu>\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#30000"
@@ -317,7 +317,7 @@ msgstr "Eltávolítás"
 
 msgctxt "#30737"
 msgid "Kids only mode"
-msgstr ""
+msgstr "Gyermekbarát mód"
 
 msgctxt "#30650"
 msgid "Language"
