--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -320,7 +320,7 @@ msgstr "Elimină"
 
 msgctxt "#30737"
 msgid "Kids only mode"
-msgstr ""
+msgstr "Mod doar pentru copii"
 
 msgctxt "#30650"
 msgid "Language"
