--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2019-12-18 20:54+0100\n"
+"PO-Revision-Date: 2020-04-11 23:17+0200\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: en_GB\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.3\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -62,10 +62,7 @@ msgid "Web registration on "
 msgstr ""
 
 msgctxt "#30101"
-msgid ""
-"PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN "
-"UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND ON "
-"THE ADD-ON GITHUB PAGE OR KODI FORUM"
+msgid "PLEASE DON'T CONTACT YOUR OPERATOR SUPPORT ABOUT THIS ADD-ON, THIS IS AN UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
 msgstr ""
 
 msgctxt "#30102"
@@ -73,15 +70,11 @@ msgid "Operators"
 msgstr ""
 
 msgctxt "#30103"
-msgid ""
-"Sorry, you are not correctly logged in, aborting playback. Try to login on the "
-"official site then try again, if the problem persists ask support with a full "
-"debug log"
+msgid "Sorry, you are not correctly logged in, aborting playback. Try to login on the official site then try again, if the problem persists ask support with a full debug log"
 msgstr ""
 
 msgctxt "#30104"
-msgid ""
-"Operator not selected. Please select your country/operator in the settings."
+msgid "Operator not selected. Please select your country/operator in the settings."
 msgstr ""
 
 msgctxt "#30105"
@@ -190,16 +183,8 @@ msgstr ""
 
 msgctxt "#30712"
 msgid ""
-"WARNING. You enabled the [Include sensitive login data in debug log] option in "
-"this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED THAT "
-"DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is enabled in "
-"Kodi, your sensitive and private login information and session data will be "
-"written to the debug log. Please don't share publicly such a log. IF YOU NEED "
-"TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you really have to send a "
-"log with that option enabled to debug a login/session related issue be very "
-"CAREFUL who you send that log too and do it privately and change your password "
-"as soon as possible. If you posted such a log publicly by accident, change "
-"your password as soon as possible. DO YOU WANT TO CONTINUE?"
+"WARNING. You enabled the [Include sensitive login data in debug log] option in this add-on expert settings. IF YOU DON'T EXACTLY KNOW WHY YOU ENABLED THAT DISABLE IT, THAT'S NOT NEEDED!! This means that if the debug log is enabled in Kodi, your sensitive and private login information and session data will be written to the debug log. Please don't share publicly such a log. IF YOU NEED TO POST A DEBUG LOG PUBLICLY DISABLE THAT OPTION. If you "
+"really have to send a log with that option enabled to debug a login/session related issue be very CAREFUL who you send that log too and do it privately and change your password as soon as possible. If you posted such a log publicly by accident, change your password as soon as possible. DO YOU WANT TO CONTINUE?"
 msgstr ""
 
 msgctxt "#30713"
@@ -359,9 +344,7 @@ msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
 msgstr ""
 
 msgctxt "#30692"
-msgid ""
-"Are you sure you want to completely reset your setup (device registration will "
-"be lost ) ?"
+msgid "Are you sure you want to completely reset your setup (device registration will be lost ) ?"
 msgstr ""
 
 msgctxt "#30693"
@@ -369,9 +352,7 @@ msgid "Include full details/RAW retrieved data in Debug log"
 msgstr ""
 
 msgctxt "#30694"
-msgid ""
-"Cryptodome dependency not present on your system, HBO Go add-on can't run. For "
-"help consult install instructions/official support thread"
+msgid "Cryptodome dependency not present on your system, HBO Go add-on can't run. For help consult install instructions/official support thread"
 msgstr ""
 
 msgctxt "#30696"
@@ -423,8 +404,17 @@ msgid "Encrypt credentials"
 msgstr ""
 
 msgctxt "#30810"
-msgid "Encrypt credentials is disabled. If this is not intended for debugging/testing or because of experiencing problems on the device please do NOT continue. If you don't know why the option is disabled don't input credentials and exit now, enable the option and then try again. If you disabled the option on purpose and know exactly why then please continue. This message will appear only now on credential input."
+msgid "If you don't know why the option is disabled don't input credentials and exit now! If this is not intended for debugging/testing or because you are experiencing problems with lost credentials on the device please do NOT continue. In that case enable the credentials encryption option and simply try again. If you disabled the option on purpose and know exactly why then please continue. This message will appear only now on credential input."
 msgstr ""
 
+msgctxt "#30811"
+msgid "[Encrypted]"
+msgstr ""
 
+msgctxt "#30812"
+msgid "[NOT Encrypted]"
+msgstr ""
 
+msgctxt "#30813"
+msgid "WARNING: Credential Encryption disabled"
+msgstr ""
