--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -440,7 +440,7 @@ msgstr "Poništi cache"
 
 msgctxt "#30809"
 msgid "Encrypt credentials"
-msgstr ""
+msgstr "Šifriraj vjerodajnice"
 
 msgctxt "#30810"
 msgid ""
@@ -457,15 +457,26 @@ msgid ""
 "\n"
 "This message will appear only now on credential input."
 msgstr ""
+"Ukoliko ne znate zašto je šifriranje vjerodajnica onemogućeno poništite "
+"operaciju sada!\n"
+"\n"
+"Ako ste namjerno onemogućili opciju i točno znate zašto nastavite.\n"
+"\n"
+"Ako to nije namijenjeno za ispravljanje pogrešaka/testiranje ili zato što "
+"imate problema s izgubljenim vjerodajnicama na uređaju, nemojte nastaviti.\n"
+"U slučaju da to nije namijerno, omogućite mogućnost šifriranja vjerodajnica "
+"u postavkama i jednostavno pokušajte ponovno.\n"
+"\n"
+"Ova poruka će se sada pojaviti, samo na unosu vjerodajnica."
 
 msgctxt "#30811"
 msgid "[Encrypted]"
-msgstr ""
+msgstr "[Šifrirano]"
 
 msgctxt "#30812"
 msgid "[NOT Encrypted]"
-msgstr ""
+msgstr "[NIJE šifrirano]"
 
 msgctxt "#30813"
 msgid "WARNING: Credential Encryption disabled"
-msgstr ""
+msgstr "UPOZORENJE: Šifriranje vjerodajnica onemogućeno"
