--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-04-12 18:17+0200\n"
-"Last-Translator: arvvoid\n"
+"PO-Revision-Date: 2020-04-16 16:32+0200\n"
+"Last-Translator: Lajos Koszti <ajnasz@ajnasz.hu>\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.0.6\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#30000"
@@ -281,7 +281,7 @@ msgstr "Sikerült"
 
 msgctxt "#30728"
 msgid "Login failed, do you want to input your credentials again?"
-msgstr "A bejelentkezés sikertelen, meg szeretné adni a hitelesítő adatait?"
+msgstr "A bejelentkezés sikertelen, meg szeretné adni a hitelesítési adatait?"
 
 msgctxt "#30729"
 msgid "KIDS"
@@ -443,7 +443,7 @@ msgstr "Lekérések gyorsítótárának ürítése"
 
 msgctxt "#30809"
 msgid "Encrypt credentials"
-msgstr ""
+msgstr "Hitelesítési adatok titkosítása"
 
 msgctxt "#30810"
 msgid ""
@@ -460,15 +460,27 @@ msgid ""
 "\n"
 "This message will appear only now on credential input."
 msgstr ""
+"Ha nem tudja, hogy a beállítás miért van kikapcsolva, ne írjon be adatokat, "
+"hanem lépjen ki most\n"
+"\n"
+"Ha szándékosan kapcsolta ki a beállítást és pontosan tudja, hogy miért, "
+"kérem folytassa.\n"
+"\n"
+"Ha nem hibakeresés vagy tesztelés céljából kapcsolta ki, vagy elvesztek a "
+"hitelesítési beállításai az eszközön, kérem NE folytassa.\n"
+"Ha nem szándékosan kapcsolta ki a beállítást, engedélyezze újra a "
+"hitelesítési adatok titkosítását és próbálja újra.\n"
+"\n"
+"Ez az üzenet csak a most, a hitelesítési adatok beírásánál lesz látható."
 
 msgctxt "#30811"
 msgid "[Encrypted]"
-msgstr ""
+msgstr "Titkosított"
 
 msgctxt "#30812"
 msgid "[NOT Encrypted]"
-msgstr ""
+msgstr "Nem titkosított"
 
 msgctxt "#30813"
 msgid "WARNING: Credential Encryption disabled"
-msgstr ""
+msgstr "FIGYELEM! A hitelesítési adatok titkosítása le van tiltva"
