--- a/resources/language/resource.language.sv_se/strings.po
+++ b/resources/language/resource.language.sv_se/strings.po
@@ -7,9 +7,9 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-04-12 18:18+0200\n"
-"Last-Translator: arvvoid\n"
-"Language-Team: arvvoid\n"
+"PO-Revision-Date: 2020-05-12 13:49+0200\n"
+"Last-Translator: Sopor\n"
+"Language-Team: sv_SE\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
