--- a/resources/language/resource.language.sv_se/strings.po
+++ b/resources/language/resource.language.sv_se/strings.po
@@ -81,7 +81,7 @@ msgid ""
 "the official site then try again, if the problem persists ask support with a "
 "full debug log"
 msgstr ""
-"Det verkar som om du inte vara korrekt inloggad, uppspelningen avbryts. "
+"Det verkar som om du inte är korrekt inloggad, uppspelningen avbryts. "
 "Försök logga in via en officiell sida och försök igen, om problemet kvarstår "
 "posta en full felsökningslogg med en beskrivning av problemet"
 
