--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -10,7 +10,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.4.1\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -432,11 +432,11 @@ msgstr "Cache"
 
 msgctxt "#30807"
 msgid "Use request cache"
-msgstr "Uključi cache"
+msgstr "Uključi predmemoriju zahtjeva"
 
 msgctxt "#30808"
 msgid "Clear request cache"
-msgstr "Poništi cache"
+msgstr "Očisti predmemoriju zahtjeva"
 
 msgctxt "#30809"
 msgid "Encrypt credentials"
@@ -483,8 +483,8 @@ msgstr "UPOZORENJE: Šifriranje vjerodajnica onemogućeno"
 
 msgctxt "#30814"
 msgid "Subtitles cache cleaned"
-msgstr ""
+msgstr "Očišćena predmemorija titlova"
 
 msgctxt "#30815"
 msgid "Clean subtitles cache"
-msgstr ""
+msgstr "Očisti predmemoriju titlova"
