--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-04-16 17:35+0300\n"
+"PO-Revision-Date: 2020-12-14 17:25+0200\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: jumakki\n"
 "Language: fi_FI\n"
@@ -491,8 +491,8 @@ msgstr "VAROITUS: Käyttäjätunnusten salaus ei ole päällä"
 
 msgctxt "#30814"
 msgid "Subtitles cache cleaned"
-msgstr ""
+msgstr "Tekstitysvälimuisti tyhjennetty"
 
 msgctxt "#30815"
 msgid "Clean subtitles cache"
-msgstr ""
+msgstr "Tyhjennä tekstitysvälimuisti"
