--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -62,7 +62,7 @@ msgstr "Błąd komunikacji, zwrócony STATUS: "
 
 msgctxt "#30009"
 msgid "The content is available from:"
-msgstr ""
+msgstr "Zawartość jest dostępna z:"
 
 msgctxt "#30100"
 msgid "Web registration on "
@@ -137,25 +137,23 @@ msgstr "DRM"
 
 msgctxt "#30665"
 msgid "Inputstream Adaptive Settings (max bitrate, resolution, etc.)"
-msgstr ""
-"Wejściowe ustawienia adaptacyjne (maksymalna szybkość transmisji, "
-"rozdzielczość, ECC ..)"
+msgstr "Ustawienia Inputstream Adaptive (bitrate, rozdzielczość, itp.)"
 
 msgctxt "#30666"
 msgid "InputStream Helper information"
-msgstr "InputStream Helper information"
+msgstr "Informacje o InputStream Helper"
 
 msgctxt "#30667"
 msgid "(Re)install Widevine CDM..."
-msgstr "(Re)install Widevine CDM..."
+msgstr "(Prze)instaluj Widevine CDM..."
 
 msgctxt "#30668"
 msgid "Remove Widevine CDM..."
-msgstr "Remove Widevine CDM..."
+msgstr "Usuń Widevine CDM..."
 
 msgctxt "#30669"
 msgid "InputStream Helper settings..."
-msgstr "InputStream Helper settings..."
+msgstr "Ustawienia InputStream Helper..."
 
 msgctxt "#30700"
 msgid "Find movies and TV Shows..."
@@ -203,7 +201,7 @@ msgstr "Brak operatora! Sprawdź ustawienia!"
 
 msgctxt "#30711"
 msgid "Search..."
-msgstr "Szukaj…"
+msgstr "Szukaj..."
 
 msgctxt "#30712"
 msgid ""
@@ -237,11 +235,11 @@ msgstr "INFORMACJE"
 
 msgctxt "#30714"
 msgid "I understand the risks and continue"
-msgstr "Rozumiem ryzyko i kontunuuje"
+msgstr "Rozumiem ryzyko i kontunuuję"
 
 msgctxt "#30715"
 msgid "Stop, let me change the settings"
-msgstr "STOP, pozwól mi zmienić ustawienia"
+msgstr "Stój, pozwól mi zmienić ustawienia"
 
 msgctxt "#30716"
 msgid "TV Shows"
@@ -293,13 +291,11 @@ msgstr "Sukces"
 
 msgctxt "#30728"
 msgid "Login failed, do you want to input your credentials again?"
-msgstr ""
-"Logowanie nie powiodło się, czy chcesz ponownie wprowadzić swoje dane "
-"uwierzytelniające?"
+msgstr "Logowanie nieudane, spróbować ponownie"
 
 msgctxt "#30729"
 msgid "KIDS"
-msgstr "DZIECI"
+msgstr "Dzieci"
 
 msgctxt "#30730"
 msgid "Weekly Top"
@@ -307,11 +303,11 @@ msgstr "Tygodniowy top"
 
 msgctxt "#30731"
 msgid "History"
-msgstr ""
+msgstr "Historia"
 
 msgctxt "#30732"
 msgid "Continue Watching"
-msgstr ""
+msgstr "Oglądaj dalej"
 
 msgctxt "#30733"
 msgid "Home Lists"
@@ -319,19 +315,19 @@ msgstr ""
 
 msgctxt "#30734"
 msgid "New search"
-msgstr ""
+msgstr "Nowe wyszukiwanie"
 
 msgctxt "#30735"
 msgid "Clear search history"
-msgstr ""
+msgstr "Wyczyść historię wyszukiwania"
 
 msgctxt "#30736"
 msgid "Remove"
-msgstr ""
+msgstr "Usuń"
 
 msgctxt "#30737"
 msgid "Kids only mode"
-msgstr ""
+msgstr "Tryb tylko dza dzieci"
 
 msgctxt "#30650"
 msgid "Language"
@@ -422,43 +418,42 @@ msgstr ""
 #, fuzzy
 msgctxt "#30696"
 msgid "Home Category"
-msgstr "Strona główna Kategoria"
+msgstr "Strona główna"
 
 #, fuzzy
 msgctxt "#30697"
 msgid "Group Home lists in special category"
-msgstr "Lista główna grupy w kategorii specjalnej"
+msgstr "Strona główna wyświetlana w kategorii specjalnej"
 
 #, fuzzy
 msgctxt "#30800"
 msgid "Sync play time with HBO Go"
-msgstr "Synchronizacja czasu gry z HBO go"
+msgstr "Synchronizacja oglądania z HBO go"
 
 #, fuzzy
 msgctxt "#30801"
 msgid "Send elapsed time to HBO Go"
-msgstr "Wyślij upływ czasu do HBO go"
+msgstr "Wyślij obejrzane do HBO go"
 
 #, fuzzy
 msgctxt "#30802"
 msgid "Get elapsed time from HBO Go"
-msgstr "Pobierz upływ czasu z HBO go"
+msgstr "Pobierz obejrzane czasu z HBO go"
 
 #, fuzzy
 msgctxt "#30803"
 msgid "Set as watched on HBO Go"
-msgstr "Ustaw jako oglądany na HBO go"
+msgstr "Oznacz jako obejrzany"
 
 #, fuzzy
 msgctxt "#30804"
 msgid "Set as unwatched on HBO Go"
-msgstr "Ustaw jako nieoglądany na HBO go"
+msgstr "Oznacz jako nieobejrzany"
 
 #, fuzzy
 msgctxt "#30805"
 msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
-msgstr ""
-"Ignoruj stan obserwowany Kodi (wyświetlanie tylko statusu HBO go oglądanego)"
+msgstr "Ignoruj status oglądanych w Kodi (wyświetlanie tylko statusu HBO)"
 
 msgctxt "#30806"
 msgid "Cache"
@@ -494,20 +489,20 @@ msgstr ""
 
 msgctxt "#30811"
 msgid "[Encrypted]"
-msgstr ""
+msgstr "[Szyfrowane]"
 
 msgctxt "#30812"
 msgid "[NOT Encrypted]"
-msgstr ""
+msgstr "[NIE szyfrowane]"
 
 msgctxt "#30813"
 msgid "WARNING: Credential Encryption disabled"
-msgstr ""
+msgstr "OSTRZEŻENIE: Szyfrowanie wyłączone "
 
 msgctxt "#30814"
 msgid "Subtitles cache cleaned"
-msgstr ""
+msgstr "Cache napisów wyczyszczone"
 
 msgctxt "#30815"
 msgid "Clean subtitles cache"
-msgstr ""
+msgstr "Wyczyść cache napisów"
