--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -2,15 +2,15 @@
 # Addon Name: HBO GO EU
 # Addon id: plugin.video.hbogoeu
 # Addon Provider: arvvoid
-# Translation by: kowalmisiek
+# Translation by: barqqlsky, kowalmisiek
 msgid ""
 msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-04-12 18:17+0200\n"
-"Last-Translator: arvvoid\n"
-"Language-Team: arvvoid, kowalmisiek\n"
+"PO-Revision-Date: 2021-01-08 10:25+0200\n"
+"Last-Translator: barqqlsky\n"
+"Language-Team: barqqlsky, kowalmisiek\n"
 "Language: pl_PL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
